src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Create %26 Present Offer</fullName>
        </values>
        <values>
            <fullName>Create Solution</fullName>
        </values>
        <values>
            <fullName>Identify %26 Analyze Customer Need</fullName>
        </values>
        <values>
            <fullName>Negotiate %26 Close Deal</fullName>
        </values>
        <values>
            <fullName>Not Started</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Admin_Activity_Status__c</fullName>
        <inlineHelpText>Updated from Admin Activity Case for Visiting Customers</inlineHelpText>
        <label>Admin Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Contact attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price calculation ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for production solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prices sent from Strålfors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract doesn&apos;t need renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract moved to new customer ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_by_Operations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Operations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_Initial_Ops_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awaiting Initial Ops Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_Price_Grp_Final_Ops_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awaiting Price Grp &amp; Final Ops Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complex_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complex Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>End date of contract to be renewed</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <inlineHelpText>how many years is the term on the contract?</inlineHelpText>
        <label>Contract Length</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Registration_Number__c</fullName>
        <formula>Account.Corporate_Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_and_Present_Offer_stage_reached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be set and used in workflows to help ascertain if Create and Present offer stage was logged - for lead identifier emails</description>
        <label>Create and Present Offer stage reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Involved_Party_ID__c</fullName>
        <formula>Account.Involved_Party_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Involved Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Closed_Lost_Feedback_Sent__c</fullName>
        <inlineHelpText>Date Closed Lost stage feedback sent to Lead Identifier</inlineHelpText>
        <label>Date Closed Lost Feedback Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed_Won_Feedback_Sent__c</fullName>
        <inlineHelpText>Date Closed Won stage feedback sent to Lead Identifier</inlineHelpText>
        <label>Date Closed Won Feedback Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Negotiate_Close_Deal_Feedback__c</fullName>
        <inlineHelpText>Date that feedback was sent to Lead Identifier for Negotiate and Close deal stage</inlineHelpText>
        <label>Date Negotiate &amp; Close Deal Feedback</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opportunity_Approved__c</fullName>
        <label>Date Opportunity Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_be_approved_by__c</fullName>
        <inlineHelpText>The date the opportunity should be approved by. This will be set by the system to 7 working days from the date the opportunity is sent to the Price Group for approval. This can be edited and moved further out but cannot be moved closer.</inlineHelpText>
        <label>Date to be approved by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box if you want to mark this opportunity as deleted</description>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Describe_what_the_deal_is_all_about__c</fullName>
        <label>Describe what the deal is all about</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_why_the_deal_is_lost__c</fullName>
        <label>Describe why the deal is lost</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_why_we_are_a_credible_supplier__c</fullName>
        <label>Describe why we are a credible supplier</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_why_we_got_the_deal__c</fullName>
        <label>Describe why we won the deal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_from_Lead__c</fullName>
        <description>To be used in workflow so we can copy standard description from lead object</description>
        <label>Description from Lead</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Operation_Group_Approval_Date__c</fullName>
        <label>Expected Operations Group Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Price_Group_Approval_Date__c</fullName>
        <label>Expected Price Group Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HasToResetSalesGroupAndOffice__c</fullName>
        <defaultValue>true</defaultValue>
        <label>HasToResetSalesGroupAndOffice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_4000_Products_or_Last_Mile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Contract Renewal approval process and updated by workflow. If a product is added to an opp and has the Sales Area 4000 then this box will be checked.</description>
        <label>Has 4000 Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Korsler__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used in contract renewal process - updated by workflow</inlineHelpText>
        <label>Has Korsler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LE_Name__c</fullName>
        <formula>Account.Parent.Name</formula>
        <label>LE Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Identified_Date__c</fullName>
        <label>Lead Identified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Identifier_Country__c</fullName>
        <formula>TEXT(Lead_Identifier__r.Employee_Country__c )</formula>
        <label>Lead Identifier Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Identifier_Email__c</fullName>
        <label>Lead Identifier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Identifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Identifier</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Employee cannot be found to match your search</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>PostNord Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Interest__c</fullName>
        <label>Lead Product Interest</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketo_Product_CSV__c</fullName>
        <label>Marketo Product CSV</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Customer_Corporate_Reg_Number__c</fullName>
        <formula>New_Customer__r.Corporate_Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Customer Corporate Reg Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>&quot;New&quot; Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (New Customer)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Open_Quotes__c</fullName>
        <label>No of Open Quotes</label>
        <summaryFilterItems>
            <field>Quote.Status</field>
            <operation>equals</operation>
            <value>Draft, Submitted for Approval, Approved, Rejected by Approver</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_times_with_Price_Group__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated by the system. Shows the number of times this opportunity has been to the Price Group.</inlineHelpText>
        <label>No of times with Price Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_for_Approver__c</fullName>
        <label>Notes for Approver</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_off_Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One-off Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_Approver__c</fullName>
        <inlineHelpText>Name of person in Operations who is looking at this opportunity. To be updated by the Operations team.</inlineHelpText>
        <label>Operations Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Status__c</fullName>
        <label>Operations Status</label>
        <picklist>
            <picklistValues>
                <fullName>Contact attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price calculation ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for production solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prices sent from Strålfors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract doesn&apos;t need renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract moved to new customer ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opp_value_in_current_year__c</fullName>
        <inlineHelpText>How much of Opportunity value is in the current year</inlineHelpText>
        <label>Opp value in current year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PWS_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check this box if the opportunity has been identified as a product white space opportunity</inlineHelpText>
        <label>PWS Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>Account.Postal_Address_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If opportunity has been created as a result of converting a potential, this is the potential it relates to</description>
        <label>Potential</label>
        <referenceTo>Potential__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceGroup_Status__c</fullName>
        <label>PriceGroup Status</label>
        <picklist>
            <picklistValues>
                <fullName>Contact attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price calculation ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for production solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prices sent from Strålfors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract doesn&apos;t need renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract moved to new customer ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Group_Approver__c</fullName>
        <inlineHelpText>Name of person in Price Group who is looking at this opportunity. To be updated by the Price Group.</inlineHelpText>
        <label>Price Group Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Group_Only_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be set by Operations if only Price Group approval is required for the final approval.</inlineHelpText>
        <label>Price Group Only Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you tick this box the opportunity will become private and will only be visible to the owner, members of the Opportunity team and users above the owner in the role hierarchy.</inlineHelpText>
        <label>Private Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No customer need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No customer interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in customer conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal lead time in business area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing volume moved to another cust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost whole customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost product on customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non approved credit check</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_Won__c</fullName>
        <label>Reason Won</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract renewal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SAP_Opportunity_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP Opportunity ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Group_When_Closed__c</fullName>
        <label>Sales Group When Closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <formula>IF( (TEXT(StageName)==&apos;Closed Won&apos; || TEXT(StageName)== &apos;Closed Lost&apos;) ,  Sales_Group_When_Closed__c ,  TEXT(Owner.Team__c))</formula>
        <label>Sales Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_When_Closed__c</fullName>
        <label>Sales Office When Closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <formula>IF( (TEXT(StageName)==&apos;Closed Won&apos; || TEXT(StageName)== &apos;Closed Lost&apos;) ,  Sales_Office_When_Closed__c ,  TEXT(Owner.FO_Sales_group__c))</formula>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_team__c</fullName>
        <label>Sales team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Before_Closed__c</fullName>
        <description>This is the stage before the stage is set to Closed Won or Closed Lost.</description>
        <label>Stage Before Closed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date when customer will start using products</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_4000_Products_Value__c</fullName>
        <inlineHelpText>Total from all products on opportunity with Sales Area 4000</inlineHelpText>
        <label>Total 4000 Products Value</label>
        <summarizedField>OpportunityLineItem.Opportunity_Value__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_4000_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_4000_Products_Volume__c</fullName>
        <inlineHelpText>Total volume for all products on opportunity with Sales Area 4000</inlineHelpText>
        <label>Total 4000 Products Volume</label>
        <summarizedField>OpportunityLineItem.Opportunity_Volume__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_4000_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Business_Value__c</fullName>
        <inlineHelpText>Total of &apos;Business Value&apos; field of all products on the opportunity that are in status &apos;Won&apos; or &apos;In Progress&apos;. This is the value that feeds the pipeline</inlineHelpText>
        <label>Total Business Value</label>
        <summarizedField>OpportunityLineItem.Opportunity_Value__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Status__c</field>
            <operation>equals</operation>
            <value>In Progress, Won</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <inlineHelpText>Amount of the total contract value over the course of the term</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Existing_Value_Lost_Products__c</fullName>
        <inlineHelpText>Total Existing Value of all products on opportunity with status &quot;Lost&quot;</inlineHelpText>
        <label>Total Existing Value - Lost Products</label>
        <summarizedField>OpportunityLineItem.Existing_Value__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Status__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Existing_Value__c</fullName>
        <inlineHelpText>Total of &apos;Existing Value&apos; field on all products on opportunity that have a status of &apos;In Progress&apos; or &apos;Won&apos; or &apos;Lost&apos;</inlineHelpText>
        <label>Total Existing Value</label>
        <summarizedField>OpportunityLineItem.Existing_Value__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Status__c</field>
            <operation>equals</operation>
            <value>In Progress, Won</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Existing_Value_for_Tracking__c</fullName>
        <description>Field to only be used for field history tracking and reporting purposes. Will be populated by workflow from the Rollup Summary field Total Existing Value</description>
        <label>Total Existing Value for Tracking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_New_Money__c</fullName>
        <inlineHelpText>The sum of all new values of all products on the opportunity that have a status of &apos;In progress&apos; or &apos;Won&apos;</inlineHelpText>
        <label>Total New Money</label>
        <summarizedField>OpportunityLineItem.New_Money_Value__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Status__c</field>
            <operation>equals</operation>
            <value>In Progress, Won</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Renegotiation_Value__c</fullName>
        <label>Total Renegotiation Value</label>
        <summarizedField>OpportunityLineItem.Renegotiation_Value__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Value_Change__c</fullName>
        <inlineHelpText>Value change between existing values and new values of all products on the opportunity that have a status of &apos;In progress&apos; or &apos;Won&apos;</inlineHelpText>
        <label>Value Change</label>
        <summarizedField>OpportunityLineItem.Value_Change__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Value_Change_for_Tracking__c</fullName>
        <description>Field not to be shown on page layout but to be used for field history tracking of Value Change in reports. Will be populated via workflow from the roll-up summary Value Change field</description>
        <label>Value Change for Tracking</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerCallback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer Scheduled Redial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__CallAttempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actimizer Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__DialTime__c</fullName>
        <label>Actimizer Redial Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actimizer Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesToDial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__MaxCallAttemptsReached__c</fullName>
        <formula>AND( CampaignId != null, Campaign.actimizerdialer__MaxCallAttempts__c &gt; 0, actimizerdialer__CallAttempts__c &gt;= Campaign.actimizerdialer__MaxCallAttempts__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Call Attempts Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__NoInterestDate__c</fullName>
        <label>Actimizer No Interest Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__NoInterest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer No Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__Notes__c</fullName>
        <label>Actimizer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__RedialPhone__c</fullName>
        <label>Actimizer Redial Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__SuccessDate__c</fullName>
        <label>Actimizer Success Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>no_of_products__c</fullName>
        <description>Calculates no of products associated to the opportunity</description>
        <inlineHelpText># of products associated to the opportunity</inlineHelpText>
        <label>no of products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>